# DiplomWork

./: .gitignore  FinalWork.sln  README.md  README_DOCKER_SETUP.md  docker-compose.yml  test_api_integration.sh  test_api_integration_fixed.sh  test_gateway_complete.sh
Backend/: BackendSolution.slnx  jwt-config.json
Backend/gateway/: .dockerignore  diagnose.sh  dockerfile  dockerfile.debug  dockerfile.fixed
Backend/gateway/src/: Program.cs  appsettings.json  ocelot.json  src.csproj  src.http
Backend/services/ActivityAgent/: ActivityAgent.csproj  Program.cs  appsettings.json  dockerfile
Backend/services/ActivityService.Tests/: ActivityService.Tests.csproj  ActivityServiceImplTests.cs  AnomalyDetectionServiceTests.cs
Frontend/: .dockerignore  .env.development  .env.production  README_Docker.md  build_and_run.sh  dockerfile  nginx.conf  package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.js  index.css
LocalEndpointAgent/: .gitignore  README.md  pyproject.toml  requirements.txt
LocalEndpointAgent/config/: agent.local.yaml  policy.example.json
LocalEndpointAgent/docs/: CONTROL_PLANE_SPEC.md
LocalEndpointAgent/rust/sysprobe/: Cargo.toml
LocalEndpointAgent/rust/sysprobe/src/: lib.rs
LocalEndpointAgent/scripts/: generate_protos.sh  install_agent.py  install_autostart_linux.sh  install_autostart_windows.ps1
LocalEndpointAgent/src/endpoint_agent/: collectors.py  config.py  grpc_clients.py  main.py  models.py  policy_cache.py  queue_store.py  risk_engine.py  runner.py  rust_bridge.py  system_control.py
(+169 files in other folders)
