[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-endpoint-agent"
version = "0.1.0"
description = "Local activity monitoring agent (Python + Rust sysprobe)"
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.66.0",
  "protobuf>=5.27.0",
  "PyYAML>=6.0.1",
  "psutil>=6.0.0",
  "pydantic>=2.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
